HospitalManagement/force-app/main/default/objects/job__c/job__c.object-meta.xml
<CustomObject>
    <label>job</label>
    <nameField>
        <label>job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>