HospitalManagement/force-app/main/default/objects/job__c/fields/closing_date__c.field-meta.xml
<CustomField>
    <fullName>closing_date__c</fullName>
    <label>closing date</label>
    <type>Date</type>
</CustomField>