HospitalManagement/force-app/main/default/objects/job__c/fields/company_name__c.field-meta.xml
<CustomField>
    <fullName>company_name__c</fullName>
    <label>company name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>