HospitalManagement/force-app/main/default/objects/job__c/fields/job_Title__c.field-meta.xml
<CustomField>
    <fullName>job_Title__c</fullName>
    <label>job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>