HospitalManagement/force-app/main/default/objects/job__c/fields/Laste_date__c.field-meta.xml
<CustomField>
    <fullName>Laste_date__c</fullName>
    <label>Laste date</label>
    <type>Date</type>
</CustomField>