HospitalManagement/force-app/main/default/objects/job__c/fields/mimnum_cgp__c.field-meta.xml
<CustomField>
    <fullName>mimnum_cgp__c</fullName>
    <label>mimnum cgp</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>